# SPLcli

./: .gitignore  Dockerfile  README.md  old_setup.py  pyproject.toml  requirements.txt  self.outputFile  setup.py
src/: SPLcli.py  cliInterface.py  logObject.py  reader.py  writer.py
src/SPLcli/: SPLcli.py  __init__.py  logObject.py  reader.py  writer.py
tests/: test_cli.py  test_internal_functions.py
tests/test_files/correct_data/: access3.txt
