[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SPLcli"
description = "Another Squid log parser"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "Click==7.0"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["SPLcli*"]  # ["*"] by default
namespaces = false  # true by default

[project.scripts]
SPLcli = "SPLcli:main"